update: change all 'healthy' texto to 'saudável'

--- a/frontend/src/app/features/dashboard/components/patient-charts-tab/patient-charts-tab.component.html
+++ b/frontend/src/app/features/dashboard/components/patient-charts-tab/patient-charts-tab.component.html
@@ -134,7 +134,7 @@
         <div
           class="flex justify-between text-sm font-medium text-gray-700 mb-1"
         >
-          <span>Saudável (HEALTHY)</span>
+          <span>Saudável</span>
           <span>{{ statistics.healthy_classification_count }} testes</span>
         </div>
         <div class="w-full bg-gray-200 rounded-full h-8 overflow-hidden">
@@ -161,7 +161,7 @@
         <div
           class="flex justify-between text-sm font-medium text-gray-700 mb-1"
         >
-          <span>Parkinson (PARKINSON)</span>
+          <span>Parkinson</span>
           <span>{{ statistics.parkinson_classification_count }} testes</span>
         </div>
         <div class="w-full bg-gray-200 rounded-full h-8 overflow-hidden">
